--- a/react-ts-webpack/index.html
+++ b/react-ts-webpack/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Doug's Typescript App</title>
 </head>
 <body>
-    
+    <div id="app-root">
+
+    </div>
+    <script src="bundle.js"></script>
 </body>
 </html>
